--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ."
   },
-  "author": "",
+  "author": "FluffyPunk",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
